--- a/smart-look/general.css
+++ b/smart-look/general.css
@@ -22,7 +22,7 @@ html,
 body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
-  background-color: khaki;
+  background-color: var(--color-shark);
 }
 
 .box__gap--small,
